// Copyright 2024 The Cross-Media Measurement Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package wfa.measurement.access.v1alpha;

import "google/api/field_behavior.proto";
import "google/api/resource.proto";

option java_package = "org.wfanet.measurement.access.v1alpha";
option java_multiple_files = true;
option java_outer_classname = "PermissionsServiceProto";

// Service for interacting with `Permission` resources.
service Permissions {
  // Checks what permissions a `Principal` has on a given resource.
  //
  // This can be used to check if the `Principal` has sufficient `Permission`s
  // for a given operation on the protected resource. If the `Permission`s that
  // the `Principal` has is a strict subset of the required `Permission`s, then
  // the operation should not be permitted.
  rpc CheckPermissions(CheckPermissionsRequest)
      returns (CheckPermissionsResponse);
}

// Request message for `CheckPermissions` method.
message CheckPermissionsRequest {
  // Name of the resource on which to check permissions. If not specified, this
  // means the root of the protected API.
  string protected_resource = 1 [
    (google.api.resource_reference) = { type: "*" },
    (google.api.field_behavior) = OPTIONAL
  ];

  // Resource name of the `Principal`.
  string principal = 2 [
    (google.api.field_behavior) = REQUIRED,
    (google.api.resource_reference).type = "access.halo-cmm.org/Principal"
  ];

  // Set of permissions to check.
  repeated string permissions = 3 [
    (google.api.field_behavior) = REQUIRED,
    (google.api.field_behavior) = UNORDERED_LIST
  ];
}

// Response message for `CheckPermissions` method.
message CheckPermissionsResponse {
  // Subset of request `permissions` that `principal` has on `resource`.
  repeated string permissions = 1
      [(google.api.field_behavior) = UNORDERED_LIST];
}
